# GLM4Free

./: README.md  example.py  pyproject.toml  server.py
GLM4Free/: cli.py  client.py
